html structure and image cover

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <main class="wrapper">
-      <section class="image-box">
+      <div class="image-box">
         <picture>
           <source
             srcset="images/image-header-desktop.jpg"
@@ -37,8 +37,8 @@
             alt="Three women at an office, working and discussing"
           />
         </picture>
-      </section>
-      <section class="text-stats-box">
+      </div>
+      <div class="text-stats-box">
         <h1 class="text-title">
           Get <span class="text-insights">insights</span> that help your
           business grow.
@@ -61,7 +61,7 @@
             <span class="stats-text">queries</span>
           </li>
         </ul>
-      </section>
+      </div>
     </main>
     <footer>
       <p class="attribution">
